--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "server.js",
     "scripts": {
         "dev": "nodemon -w src --exec \"babel-node src \"",
-        "build": "babel src --out-div dist"
+        "build": "babel src --out-dir dist"
     },
     "repository": {
         "type": "git",
